       traffic.
     * Add build time configure command to enable auto-validatior as default
       miniflow implementation at build time.
     * Cache results for CPU ISA checks, reduces overhead on repeated lookups.
     * Add AVX512 based optimized miniflow extract function for traffic type
       IPv4/UDP, IPv4/TCP, Vlan/IPv4/UDP and Vlan/Ipv4/TCP.
   - ovs-ctl:
     * New option '--no-record-hostname' to disable hostname configuration
       in ovsdb on startup.
     * New command 'record-hostname-if-not-set' to update hostname in ovsdb.
   - DPDK:
     * OVS validated with DPDK 20.11.1. It is recommended to use this version
       until further releases.
     * New debug appctl command 'dpdk/get-malloc-stats'.
     * Add hardware offload support for tunnel pop action (experimental).
       Available only if DPDK experimantal APIs enabled during the build.
     * Add hardware offload support for VXLAN flows (experimental).
       Available only if DPDK experimantal APIs enabled during the build.
     * EAL options --socket-mem and --socket-limit to have default values
       removed with 2.17 release. Logging added to alert users.
   - ovsdb-tool:
     * New option '--election-timer' to the 'create-cluster' command to set the
       leader election timer during cluster creation.
   - OVS now reports the datapath capability 'ct_zero_snat', which reflects
     whether the SNAT with all-zero IP address is supported.
     See ovs-vswitchd.conf.db(5) for details.
   - ovs-appctl:
     * Added ability to add and delete static mac entries using:
       'ovs-appctl fdb/add <bridge> <port> <vlan> <mac>'
       'ovs-appctl fdb/del <bridge> <vlan> <mac>'


v2.15.0 - 15 Feb 2021
---------------------
   - OVSDB:
     * Changed format in which ovsdb transactions are stored in database files.
       Now each transaction contains diff of data instead of the whole new
       value of a column.
       New ovsdb-server process will be able to read old database format, but